modifying and adding

--- a/hons/docs/tAlgos.tex
+++ b/hons/docs/tAlgos.tex
@@ -1,2 +1,17 @@
 \chapter{Heuristics}
-this gonna be filled in some time?
+
+\section{Linear Relaxation}
+
+
+
+\subsection{General Relaxations}
+
+\subsection{RAAP Relaxation}
+
+\subsection{Issues with Relaxation}
+
+\section{Heuristics}
+
+\subsection{Motivation}
+
+\subsection{Algorithm}
