--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -52,6 +52,16 @@
   publisher={ACM}
 }
 
+%Godly maths paper
+@inproceedings{fer07,
+  title={Linear programming relaxations of maxcut},
+  author={de la Vega, W.F. and Kenyon-Mathieu, C.},
+  booktitle={Proceedings of the eighteenth annual ACM-SIAM symposium on Discrete algorithms},
+  pages={53--61},
+  year={2007},
+  organization={Society for Industrial and Applied Mathematics}
+}
+
 %i havent read this paper, but im reference chaining it
 @article{for62,
   title={Flows in networks},
