--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -6,6 +6,7 @@
 \usepackage{verbatim}
 \usepackage{theorem}
 \usepackage{pst-all}
+\usepackage{algorithmic}
 
 \author{Nic Hollingum - 308193415}
 \title{Thesis working title}
