begin experiments NAO

--- a/hons/docs/tExperiment.tex
+++ b/hons/docs/tExperiment.tex
@@ -1,4 +1,28 @@
 \chapter{Experimental Results}
 \label{chapExperiment}
 
-We presume we'll get this far i take it..
+\section{Tolerance Experiments}
+
+\subsection{Correct Functioning of Mechanisms}
+
+First we must show the correct recovery of the system after thee occurance of a fault.
+These are the most basic kinds of experiments and are very controlled.
+Our simulator uses mostly randomly-generated graphs as problem instances, so we devise a simple deterministic invocation behaviour which allows us to determine if the fault-tolerant are working correctly.
+
+
+
+\subsection{Multiple Failure Experiments}
+
+\section{Heuristic and Optimal Assignment Costs}
+
+\subsection{Single Version Assignments}
+
+\subsection{Multiple Duplicate Assignments}
+
+\section{Assignment Properties}
+
+\subsection{Cost Varying Assignments}
+
+\subsection{Processor Varying Assignments}
+
+varied number of processors
